# YATA

./: README.md
backend/: pyproject.toml
backend/backend/: settings.py  urls.py
backend/todos/: models.py
backend/todos/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/api/: todos.js
frontend/src/component/AddTodo/: AddTodo.js
frontend/src/component/App/: App.js
frontend/src/component/Button/: Button.js
frontend/src/component/Todo/: Todo.css  Todo.js
